--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
 
 .DS_Store
+
+npm-debug.log
+
+.idea/.name
+
+.idea/TypescriptPreprocessor.iml
+
+.idea/encodings.xml
+
+.idea/misc.xml
+
+.idea/modules.xml
+
+.idea/scopes/scope_settings.xml
+
+.idea/vcs.xml
+
+.idea/workspace.xml
